--- a/J SNACK 1/index.html
+++ b/J SNACK 1/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>SNACK 1</title>
 </head>
 <body>
+    <div id="container"></div>
     <script src="JS/script.js"></script>
 </body>
 </html>
